Fixed height of card component to adapt when text is too long

--- a/src/components/PollCard/PollCard.css
+++ b/src/components/PollCard/PollCard.css
@@ -1,6 +1,5 @@
 .pollCardWrapper {
   width: 300px;
-  height: 50px;
   border: 1px solid #1b2430;
   border-radius: 10px;
   cursor: pointer;
